@@ -1,3 +1,7 @@
+Next Release
+
+ - Improved parsing of arguments in the supervisorctl plugin.
+
 0.4 (2009-11-21)
 
  - We no longer bundle ez_setup to bootstrap setuptools installation.
